[package]
name = "hyper_test"
version = "0.0.1"
authors = ["liming <421100037@qq.com>"]

[dependencies]
hyper = "0.7.0"
rustc-serialize = "0.3.16"
postgres = "0.10.0"
rand = "0.3.11"
url = "0.2.37"
rust-crypto = "0.2.34"
time = "0.1.32"
regex = "0.1.41"
filetime = "0.1"

lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs.git" }

easydb = {version="0.0.1", path="../easydb"}
easy_util = {version="0.0.1", path="../easy_util"}
